--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+/* 폰트 설정 */
+@font-face {
+  font-family: '116watermelon';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.0/116watermelon.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
 }
